<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.navigation.side_nav.RulesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary">

        <TextView
            android:id="@+id/rulesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/rules"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rule1Label"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="12dp"
            android:text="@string/rule1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rule2Label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/rule6Label"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="180dp"
            android:text="@string/rule6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rule2Label"
            android:layout_width="355dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="12dp"
            android:text="@string/rule2"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rule3Label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rule3Label"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="12dp"
            android:text="@string/rule3"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rule4Label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rule5Label"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="12dp"
            android:text="@string/rule5"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rule6Label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rule4Label"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="12dp"
            android:text="@string/rule4"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rule5Label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/logoRules"
            android:layout_width="79dp"
            android:layout_height="74dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/match_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
