<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.side_nav.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aboutConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/logoMenu3"
            android:layout_width="359dp"
            android:layout_height="236dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/match_it"
            app:layout_constraintBottom_toTopOf="@+id/playGameButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutLabel"
            app:layout_constraintVertical_bias="0.158" />

        <TextView
            android:id="@+id/rule1Label5"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginBottom="64dp"
            android:text="@string/about_game_phase_3"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rule1Label3"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginBottom="12dp"
            android:text="@string/about_game_phase_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rule1Label4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoMenu3"
            app:layout_constraintVertical_bias="0.943" />

        <TextView
            android:id="@+id/rule1Label4"
            android:layout_width="357dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_game_phase_2"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/rule1Label5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/aboutLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/about"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoAbout"
            android:layout_width="79dp"
            android:layout_height="74dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/match_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>