<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.game_done.GameDoneFragment">

    <data>
        <variable
            name="gameDoneViewModel"
            type="com.example.android.navigation.game_done.GameDoneViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/doneConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <TextView
            android:id="@+id/gameDoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/game_done_label"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scores"
            android:layout_width="135dp"
            android:layout_height="31dp"
            android:layout_marginEnd="48dp"
            android:text="@{gameDoneViewModel.gameScoreText}"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628" />

        <TextView
            android:id="@+id/times"
            android:layout_width="135dp"
            android:layout_height="31dp"
            android:layout_marginEnd="48dp"
            android:text="@{gameDoneViewModel.timeSpentText}"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.692" />

        <TextView
            android:id="@+id/yourScores"
            android:layout_width="145dp"
            android:layout_height="31dp"
            android:text="@string/your_score"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/scores"
            app:layout_constraintHorizontal_bias="0.738"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628" />

        <TextView
            android:id="@+id/yourTimes"
            android:layout_width="128dp"
            android:layout_height="31dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="20dp"
            android:text="@string/your_times"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/times"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.692" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="202dp"
            android:layout_height="65dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="536dp"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="12dp"
            android:text="@string/play_again_button"
            app:layout_constraintBottom_toTopOf="@+id/quitToMenuButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/quitToMenuButton"
            android:layout_width="202dp"
            android:layout_height="65dp"
            android:layout_marginStart="115dp"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="35dp"
            android:text="@string/quit_to_menu_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/logoGameDone"
            android:layout_width="79dp"
            android:layout_height="74dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/match_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/goodjobLogo"
            android:layout_width="343dp"
            android:layout_height="278dp"
            android:contentDescription="@string/good_job"
            android:src="@drawable/game_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.264" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>