<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".ScoreboardFragment">

        <Button
            android:id="@+id/backToMenu"
            android:layout_width="202dp"
            android:layout_height="65dp"
            android:layout_marginBottom="35dp"
            android:text="@string/back_to_menu_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/logoGame2"
            android:layout_width="79dp"
            android:layout_height="74dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/match_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listScore"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <TextView
            android:id="@+id/rankingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/ranking"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rankingLabel">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:background="@color/secondary"
                android:text="@string/username_col"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="61dp"
                android:layout_height="0dp"
                android:layout_marginEnd="60dp"
                android:background="@color/secondary"
                android:text="@string/score_col"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="61dp"
                android:layout_height="0dp"
                android:background="@color/secondary"
                android:text="@string/time_col"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

